# winapirstest

./: .gitignore
firsttest/: Cargo.toml
firsttest/src/: main.rs
gethandles/: Cargo.toml
gethandles/src/: main.rs
wincrate/: .gitignore  Cargo.toml
wincrate/src/: main.rs
